data/derived/sp14/progs/unify/prog2028.ml.out
Characters 207-208:
  let (_, res) = List.fold_right f base args in
                                 ^
Error: This expression has type int * int list -> int * int -> int * int list
       but an expression was expected of type
         int * int list -> int * int -> int * int
       Type int list is not compatible with type int 
